--- a/multi-stage-multi-agent/Jenkinsfile
+++ b/multi-stage-multi-agent/Jenkinsfile
@@ -9,6 +9,11 @@ pipeline {
         sh 'mvn --version'
       }
     }
+    public class HelloWorld {
+    public static void main(String[] args) {
+        System.out.println("Hello, World!");
+    }
+}
     stage('Front-end') {
       agent {
         docker { image 'node:16-alpine' }
